chore: containarize app and config services